--- a/perfil.html
+++ b/perfil.html
@@ -1,22 +1,20 @@
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>PERFIL</title>
-<link href="styles.css" rel="stylesheet" type="text/css">
-<link href="style/index_style.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<link href="styles.css" rel="stylesheet" type="text/css" />
+<link href="index_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {
-	background-color: #000;
 	background-image: url(111.jpg);
 }
+}
 </style>
-<link href="styles.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
-
-
-
-
 <div id="NotAllowedme"> 
 
 <div id="jd-main"> 
@@ -138,6 +136,7 @@ body {
 <span class="jd-btn-nav" style="color:#FF0000"><strong>BIENVENIDO MI XAT CHAT RADIO MALAJES</strong></span>
 <p></p>                                               
 <iframe src="https://xat.com/embed/chat.php#id=220499947&gn=RADIOMALAJES" width="650" height="486" frameborder="0" scrolling="no"></iframe><br><small><a target="_BLANK" href="https://xat.com/web_gear/chat/embed.php?id=220499947&GroupName=RADIOMALAJES"></a><a target="_BLANK" href="https://xat.com/RADIOMALAJES"></a></small><br>                                                 
+
 <table width="200" border="0">
   <tr>
     <td width="200" height="30" align="center" bgcolor="#990000"><p><strong class="jd-btn-nav">PIRATA</strong></p></td>
@@ -165,8 +164,7 @@ body {
     <td width="600"><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script><script src="https://cdn.mexiserver.com/html5players/4/js/player4-mexiserver.js"></script><div id="mexiserver" style="width:600; height:90;"></div><script> $("#mexiserver").lunaradio({ streamurl: "https://technoplayerserver.net:8124", radioname: "RADIOMALAJES", coverimage: "https://xatimg.com/image/YyrlRzyqpeDB.png", onlycoverimage: false, userinterface: "small", backgroundcolor: "#0e1015", fontcolor: "#ffffff", hightlightcolor: "#e7433c", fontname: "Saira Condensed", googlefont: "Saira+Condensed:wght@100", fontratio: "0.4", scroll: "true", coverstyle: "animated", usevisualizer: "real", visualizertype: "5", streamtype: "shoutcast2", shoutcastpath: "/stream", shoutcastid: "1", metadatainterval: "5000", volume: "100", usestreamcorsproxy: "true", });</script></td>
     <td width="260">></td>
   </tr>
-</table>
-                                                                                                  
+</table>                                                                                                
 
 </div></div></div></div></div></div>
 
@@ -176,14 +174,16 @@ body {
 
 <div class="social">
 		<a href="https://xat.com/RADIOMALAJES"><img src="https://xatimg.com/image/EOwJKJ12SjUO.png" alt="Chat"></a>
-		<a href="xat.com/cambio"><img src="https://xatimg.com/image/Nq3dQCnXu35r.png" alt="youtube"></a>
-		<a href="xat.com/trade"><img src="https://xatimg.com/image/CznEbkVEREJC.png" alt="trade"></a>
+		<a href="https://xat.com/cambio"><img src="https://xatimg.com/image/Nq3dQCnXu35r.png" alt="youtube"></a>
+		<a href="https://xat.com/trade"><img src="https://xatimg.com/image/CznEbkVEREJC.png" alt="trade"></a>
 </a>
 		<a href="https://www.youtube.com/watch?v=P3aVh3Fw2xs"><img src="https://xatimg.com/image/9X8pe3RLn02q.png" alt="youtube"></a>
-	</div>
+</div>
     <!-- Contador de visitas -->
 <center>
 <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=6833"></a></center>
 <!-- Fin Contador de visitas -->
-</body></html>
 
+</body></html>
+</body>
+</html>
