--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>AF</title>
-<link href="styles.css" rel="stylesheet" type="text/css">
-<link href="style/index_style.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<link href="styles.css" rel="stylesheet" type="text/css" />
+<link href="index_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 body {
-	background-color: #000;
 	background-image: url(111.jpg);
 }
+}
 </style>
+
 </head>
 
 <body>
-
-
-
-
 <div id="NotAllowedme"> 
 
 <div id="jd-main"> 
