--- a/halloween.html
+++ b/halloween.html
@@ -12,6 +12,7 @@ body {
 }
 </style>
 
+<title>halloween</title>
 </head>
 
 <body>
@@ -218,3 +219,4 @@ body {
 <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=6833"></a></center>
 <!-- Fin Contador de visitas -->
 </body></html>
+
